wcfsetup/install/files/style/wbb.less
/* ############## Board List ############## */
.wbbBoardList {
	> li.wbbBoardNodeTop:not(.wbbBoardNodeTopEmpty) > div {
		.borderRadius(@wcfContainerBorderRadius - 2, 0);
	}
	
	> li > ul > li:last-child div.wbbBoard:last-child {
		.borderRadius(0, @wcfContainerBorderRadius - 2);
	}
	
	> li > ul > .wbbCategory > hgroup {
		padding-left: 43px;
	}
	
	> li > ul > li > ul > .wbbCategory > hgroup {
		padding-left: 79px;
	}
	
	.tabularBox:not(.wbbBoardNodeTop) {
		border-radius: 0;
		border-width: 1px 0 0;
	}
	
	.wbbStats {
		left: 50%;
		margin-top: @wcfGapSmall;
		position: absolute;
		top: @wcfGapSmall;
		width: 15%;
		
		> dl {
			> dt {
				line-height: @wcfBaseLineHeight;
				width: 40%;
			}
			
			> dd {
				font-weight: normal;
				font-size: @wcfSmallFontSize;
				width: 58%;
			}
		}
	}
	
	.wbbLastPost {
		left: 65%;
		position: absolute;
		top: @wcfGapSmall;
		width: 35%; /* = 100% - left */
		
		> div {
			background-color: @wcfContentBackgroundColor;
			padding: @wcfGapSmall;
			margin-right: @wcfGapSmall;
			
			.borderRadius();
			.boxShadowNative(~"inset 0 1px 1px rgba(0, 0, 0, .1)");
		}
		
		hgroup {
			> h1 {
				display: inline-block;
				overflow: hidden;
				text-overflow: ellipsis;
				width: 98%;
				white-space: nowrap;
				
				> .badge {
					font-size: @wcfSmallFontSize;
				}
			}
			
			> h2 {
				font-size: @wcfSmallFontSize;
				
				time {
					color: @wcfDimmedColor;
				}
			}
		}
	}
	
	.wbbSubBoards {
		li {
			display: inline-block;
		}
	}

	.wbbBoardDescription {
		font-size: 90%;
	}

	.wbbBoardContainer {
		position: relative;
	}

	.wbbBoardNodeTop {
		margin-top: @wcfGapMedium;
	}

	.wbbBoard {
		min-height: 44px;
		padding: @wcfGapSmall;
		padding-right: 51%;
		
		.transition(background, .1s);
		
		&~ ul > .wbbBoardContainer > .wbbBoard {
			padding-left: 43px;

			&~ ul > .wbbBoardContainer > .wbbBoard {
				padding-left: 79px;
			}
		}
		
		&:hover {
			background-color: @wcfContainerHoverBackgroundColor;
		}
	}

	.wbbBoardNode1 {
		background-color: @wcfContainerBackgroundColor;
	}

	.wbbBoardNode2 {
		background-color: @wcfContainerAccentBackgroundColor;
	}
	
	.wbbBoardNodeTopEmpty div.wbbBoard {
		.borderRadius(@wcfContainerBorderRadius - 2);
	}
	
	.wbbBoard > div > hgroup > h1 {
		font-weight: normal;
	}
	
	.new > div > hgroup > h1, .wbbSubBoards li.new a {
		font-weight: bold;
	}
	
	.wbbCollapsibleCategory .collapsibleButton {
		display: inline-block;
		margin-right: 7px;
	}
}

/* ignored boards */
.wbbBoardListReduced {
	.wbbCategory > hgroup label {
		color: @wcfPageLinkHoverColor;
	}
	
	.wbbBoardContainer {
		> div {
			padding: 7px;
		}
		
		> ul > .wbbBoardContainer {
			> div {
				padding-left: 28px;
			}
			
			> ul > .wbbBoardContainer > div {
				padding-left: 56px;
			}
		}
	}
}

/* ############## Thread List ############## */
.wbbThreadList {
	/* TODO: keep these colors? */
	.wbbThreadDeleted:not(:hover) {
		td {
			background-color: @wcfErrorBackgroundColor;
			color: @wcfErrorColor;
			
			a {
				color: @wcfErrorColor;
			}
		}
	}
	
	/* TODO: keep these colors? */
	.wbbThreadDisabled:not(.wbbThreadDeleted):not(:hover) {
		td {
			background-color: @wcfSuccessBackgroundColor;
			color: @wcfSuccessColor;
			
			a {
				color: @wcfSuccessColor;
			}
		}
	}
	
	.wbbLastPost h2 {
		color: @wcfDimmedColor;
		font-size: @wcfSmallFontSize;
	}
	
	.columnLastPost {
		white-space: nowrap;
	}
	
	.columnAvatar {
		div {
			position: relative;
			width: 40px;
			height: 38px;
			
			> p > img {
				opacity: .6;
				
				.transition(opacity, .2s);
			}
		}
		
		.myAvatar {
			position: absolute;
			width: 16px;
			height: 16px;
			bottom: -2px;
			left: 24px;
			opacity: 1;
			
			.boxShadow(0, 0, rgba(0, 0, 0, .3), 3px);
		}
	}
	
	.columnTopic > h1 > .labelList {
		float: right;
		padding-left: 7px;
		
		> li > .badge {
			font-size: @wcfSmallFontSize;
		}
	}
	
	.columnTopic .wbbTopicLink {
		font-size: @wcfTitleFontSize;
	}
	
	tr.new .columnTopic > h1 {
		font-weight: bold;
	}
	
	tr.new .columnAvatar div > p > img, tr:hover .columnAvatar div > p > img {
		opacity: 1;
	}
}


/* ############## Post List ############## */
.wbbThreadPostList {
	.wbbThreadStarter {
		position: relative;
		
		> .message {
			&:after,
			&:before {
				content: "";
				display: block;
				height: 128px;
				left: 0;
				position: absolute;
				top: 0;
				width: 128px;
			}
			
			&:after {
				background-image: url(../icon/circleStar.svg);
				background-position: 4px 4px;
				background-repeat: no-repeat;
				background-size: 16px;
				height: 20px;
				width: 20px;
			}
			
			&:before {
				.borderRadius(@wcfContainerBorderRadius, 0, 0, 0);
				.linearGradientNative(~"left top, rgba(255, 255, 255, .85) 0%, rgba(255, 255, 255, 0) 40%");
			}
		}
	}
	
	.newMessageBadge {
		border: 1px solid @wcfLinkColor;
		border-radius: 2px;
		color: @wcfLinkColor;
		display: inline-block;
		font-weight: bold;
		font-size: @wcfSmallFontSize;
		left: -220px;
		top: 30px;
		padding: 6px 10px;
		position: absolute;
		text-transform: uppercase;
		
		.linearGradient(darken(@wcfContainerHoverBackgroundColor, 10%), @wcfContainerHoverBackgroundColor, darken(@wcfContainerHoverBackgroundColor, 10%));
		.textShadow(darken(@wcfContainerHoverBackgroundColor, 10%));
		.boxShadow(1px, 1px, rgba(0, 0, 0, .2), 3px);
		
		&:before {
			border-color: transparent @wcfLinkColor transparent transparent;
			border-width: 0px 7px 7px;
			border-style: solid;
			bottom: -7px;
			content: "";
			display: block;
			height: 0px;
			left: -8px;
			position: absolute;
			width: 0px;
		}
	}
}

.wbbPostLoading {
	background-image: url(../icon/spinner.svg);
	background-position: center center;
	background-repeat: no-repeat;
	background-size: 64px;
}

/* Thread quick reply */
#threadQuickReply {
	.wbbThreadQuickReplyLoading {
		background-image: url(../icon/spinner.svg);
		background-position: center center;
		background-repeat: no-repeat;
		background-size: 64px;
	}
	
	.formSubmit {
		padding-bottom: @wcfGapMedium;
	}
}

